--- a/listagem.html
+++ b/listagem.html
@@ -202,23 +202,28 @@
   styles: { fontSize: 10, cellPadding: 2 },
   margin: { top: 15, bottom: 15 }, // Ajuste aqui - margin top fixo para todas páginas
   didDrawPage: function (data) {
-    const pageCount = doc.internal.getNumberOfPages();
-    const pageSize = doc.internal.pageSize;
-    const pageHeight = pageSize.getHeight();
-    const pageWidth = pageSize.getWidth();
-    const currentPage = doc.internal.getCurrentPageInfo().pageNumber;
+  const pageSize = doc.internal.pageSize;
+  const pageHeight = pageSize.getHeight();
+  const pageWidth = pageSize.getWidth();
+  const currentPage = doc.internal.getCurrentPageInfo().pageNumber;
+  const totalPages = doc.internal.getNumberOfPages();
 
-    // Só adiciona cabeçalho completo na primeira página
-    if (currentPage === 1) {
-      doc.addImage(img, 'PNG', logoX, 10, logoWidth, logoHeight);
-      doc.setFontSize(13);
-      doc.text("Famílias Vivendo na Graça e Unção do Espírito", pageWidth / 2, 10 + logoHeight + 7, { align: "center" });
-      doc.text("Lista completa de membros", pageWidth / 2, 10 + logoHeight + 15, { align: "center" });
-    }
+  // Só adiciona cabeçalho completo na primeira página
+  if (currentPage === 1) {
+    doc.addImage(img, 'PNG', logoX, 10, logoWidth, logoHeight);
+    doc.setFontSize(13);
+    doc.text("Famílias Vivendo na Graça e Unção do Espírito", pageWidth / 2, 10 + logoHeight + 7, { align: "center" });
+    doc.text("Lista completa de membros", pageWidth / 2, 10 + logoHeight + 15, { align: "center" });
+  }
 
-    // Rodapé em todas as páginas
-    doc.setFontSize(8);
-    doc.text(`Página ${currentPage} de ${pageCount}`, pageWidth / 2, pageHeight - 7, { align: "center" });
+  // Rodapé em todas as páginas
+  doc.setFontSize(8);
+  
+  // Usamos setTimeout para garantir que a contagem total de páginas esteja disponível
+  setTimeout(() => {
+    const finalTotalPages = doc.internal.getNumberOfPages();
+    doc.setPage(currentPage); // Volta para a página atual
+    doc.text(`Página ${currentPage} de ${finalTotalPages}`, pageWidth / 2, pageHeight - 7, { align: "center" });
 
     const now = new Date();
     const geradoEm = now.toLocaleString("pt-BR", {
@@ -226,12 +231,13 @@
       hour: "2-digit", minute: "2-digit"
     });
     doc.text(`Gerado em: ${geradoEm}`, pageWidth - 10, pageHeight - 7, { align: "right" });
+  }, 0);
 
-    // Ajusta o startY para páginas seguintes
-    if (currentPage > 1) {
-      data.table.startY = 15; // Posição fixa mais próxima do topo para páginas 2+
-    }
-  },
+  // Ajusta o startY para páginas seguintes
+  if (currentPage > 1) {
+    data.table.startY = 15;
+  }
+},
   headStyles: {
     fillColor: [41, 128, 185],
     halign: 'center'
