--- a/listagem.html
+++ b/listagem.html
@@ -201,12 +201,12 @@
   body: membrosArray,
   styles: { fontSize: 10, cellPadding: 2 },
   margin: { top: 15, bottom: 15 }, // Ajuste aqui - margin top fixo para todas páginas
-  didDrawPage: function (data) {
+  
+             didDrawPage: function (data) {
   const pageSize = doc.internal.pageSize;
   const pageHeight = pageSize.getHeight();
   const pageWidth = pageSize.getWidth();
   const currentPage = doc.internal.getCurrentPageInfo().pageNumber;
-  const totalPages = doc.internal.getNumberOfPages();
 
   // Só adiciona cabeçalho completo na primeira página
   if (currentPage === 1) {
@@ -216,22 +216,28 @@
     doc.text("Lista completa de membros", pageWidth / 2, 10 + logoHeight + 15, { align: "center" });
   }
 
-  // Rodapé em todas as páginas
+  // Adiciona rodapé em todas as páginas
   doc.setFontSize(8);
   
-  // Usamos setTimeout para garantir que a contagem total de páginas esteja disponível
-  setTimeout(() => {
+  // Usamos uma função de callback após a tabela ser desenhada
+  const addFooter = () => {
     const finalTotalPages = doc.internal.getNumberOfPages();
-    doc.setPage(currentPage); // Volta para a página atual
+    
+    // Texto de numeração de páginas
     doc.text(`Página ${currentPage} de ${finalTotalPages}`, pageWidth / 2, pageHeight - 7, { align: "center" });
-
+    
+    // Data de geração
     const now = new Date();
     const geradoEm = now.toLocaleString("pt-BR", {
       day: "2-digit", month: "2-digit", year: "numeric",
       hour: "2-digit", minute: "2-digit"
     });
     doc.text(`Gerado em: ${geradoEm}`, pageWidth - 10, pageHeight - 7, { align: "right" });
-  }, 0);
+  };
+
+  // Chamamos a função imediatamente e também no final do fluxo
+  addFooter();
+  setTimeout(addFooter, 0);
 
   // Ajusta o startY para páginas seguintes
   if (currentPage > 1) {
