--- a/listagem.html
+++ b/listagem.html
@@ -157,7 +157,6 @@
 <script>
   document.getElementById("btnExportarPDF").addEventListener("click", async () => {
   try {
-    // Configuração do documento
     const doc = new window.jsPDFGlobal({
       orientation: "landscape",
       unit: "mm",
@@ -208,11 +207,10 @@
     doc.text("Famílias Vivendo na Graça e Unção do Espírito", pageWidth / 2, 10 + logoHeight + 7, { align: "center" });
     doc.text("Lista completa de membros", pageWidth / 2, 10 + logoHeight + 15, { align: "center" });
 
-    // Posição inicial após o cabeçalho
     const startY = 10 + logoHeight + 25;
 
     // Configurações da tabela
-    const tableConfig = {
+    doc.autoTable({
       head: [["Nome", "Nascimento", "Sexo", "Telefone", "Função", "Batismo", "Endereço completo"]],
       body: membrosArray,
       startY: startY,
@@ -237,11 +235,11 @@
         6: { cellWidth: 80 }
       },
       didDrawPage: function(data) {
-        // Rodapé em todas as páginas
+        // Número da página apenas (sem total)
         doc.setFontSize(8);
-        const totalPages = doc.getNumberOfPages();
-        doc.text(`Página ${data.pageNumber} de ${totalPages}`, pageWidth / 2, doc.internal.pageSize.getHeight() - 10, { align: "center" });
+        doc.text(`Página ${data.pageNumber}`, pageWidth / 2, doc.internal.pageSize.getHeight() - 10, { align: "center" });
         
+        // Data de geração
         const now = new Date();
         doc.text(`Gerado em: ${now.toLocaleString("pt-BR")}`, pageWidth - 10, doc.internal.pageSize.getHeight() - 10, { align: "right" });
 
@@ -250,10 +248,7 @@
           data.table.startY = 20;
         }
       }
-    };
-
-    // Gerar a tabela
-    doc.autoTable(tableConfig);
+    });
     
     // Salvar o PDF
     doc.save("lista_membros.pdf");
