--- a/listagem.html
+++ b/listagem.html
@@ -238,7 +238,7 @@
           m.nomeFormatado,
           m.nascimento ? formatDate(m.nascimento) : "Não informado",
           m.sexoFormatado,
-          m.telefone || "SEM INFORMAÇÃO",
+          m.telefone || "Não informado",
           m.funcaoFormatada,
           m.batismo ? formatDate(m.batismo) : "Não informado",
           `${endereco}\n${m.cidade || ''}, ${m.estado || ''}`
