--- a/listagem.html
+++ b/listagem.html
@@ -252,7 +252,7 @@
       startY: startY,
       margin: { top: 10, bottom: 15 },
       styles: {
-        fontSize: 9,
+        fontSize: 10,
         cellPadding: 1.5,
         overflow: "linebreak",
         fontStyle: 'normal'
@@ -288,7 +288,7 @@
     });
 
     // 7. Salvar o PDF
-    doc.save("lista_membros_ordenada.pdf");
+    doc.save("Lista_Membros.pdf");
 
   } catch (error) {
     console.error("Erro ao gerar PDF:", error);
