--- a/listagem.html
+++ b/listagem.html
@@ -258,17 +258,15 @@
       margin: { top: 10, bottom: 15 },
       styles: {
         fontSize: 10,
-        cellPadding: 3, // Aumente este valor para aumentar a altura das linhas
+        cellPadding: 2,
         overflow: "linebreak",
         fontStyle: 'normal'
-            
       },
       headStyles: {
         fillColor: [41, 128, 185],
         textColor: [255, 255, 255],
         fontSize: 9,
-        fontStyle: 'bold'
-        cellPadding: 4 // Mais espaço no cabeçalho
+        fontStyle: 'bold
          
       },
       columnStyles: {
