--- a/listagem.html
+++ b/listagem.html
@@ -258,7 +258,7 @@
       margin: { top: 10, bottom: 15 },
       styles: {
         fontSize: 10,
-        cellPadding: 2,
+        cellPadding: 1.5,
         overflow: "linebreak",
         fontStyle: 'normal'
       },
@@ -266,8 +266,7 @@
         fillColor: [41, 128, 185],
         textColor: [255, 255, 255],
         fontSize: 9,
-        fontStyle: 'bold
-         
+        fontStyle: 'bold'
       },
       columnStyles: {
         0: { cellWidth: 64 }, // NOME
