--- a/listagem.html
+++ b/listagem.html
@@ -262,8 +262,8 @@
         overflow: "linebreak", // Quebra de linha
         fontStyle: 'normal', // Estilo normal
         cellPadding: 2.5, // Espaçamento interno das células
-        lineWidth: 0.1, // Espessura da linha
-        lineColor: [200, 200, 200] // Cor da linha (cinza claro)
+        lineWidth: 0.0, // Espessura da linha
+        lineColor: [240, 255, 240] // Cor da linha (cinza claro 200, 200, 200)
       },
       headStyles: { // Estilos do cabeçalho
         fillColor: [41, 128, 185], // Cor de fundo (azul)
