--- a/listagem.html
+++ b/listagem.html
@@ -153,7 +153,7 @@
   });
 </script>
 
-<!-- 🔹 Exportar PDF --> // Comentário indicando a seção de exportação de PDF
+<!-- 🔹 Exportar PDF --> 
 <script> // Início do bloco de script JavaScript
 
   // Adiciona um event listener para o clique no botão de exportar PDF
@@ -317,7 +317,7 @@ function formatDate(dateString) { // Recebe string de data
     return dateString; // Retorna a string original
   }
 }
-</script> // Fim do bloco de script
+</script> 
 
 
 
