--- a/listagem.html
+++ b/listagem.html
@@ -266,7 +266,7 @@
         lineColor: [240, 255, 240] // Cor da linha (cinza claro 200, 200, 200)
       },
       headStyles: { // Estilos do cabeçalho
-        fillColor: [41, 128, 185], // Cor de fundo (azul)
+        fillColor: [0, 128, 0], // Cor de fundo (azul 41, 128, 185)
         textColor: [255, 255, 255], // Cor do texto (branco)
         fontSize: 9, // Tamanho da fonte
         fontStyle: 'bold', // Negrito
