--- a/listagem.html
+++ b/listagem.html
@@ -263,7 +263,7 @@
         fontStyle: 'normal', // Estilo normal
         cellPadding: 2.5, // Espaçamento interno das células
         lineWidth: 0.0, // Espessura da linha
-        lineColor: [200, 200, 200] // Cor da linha (cinza claro 200, 200, 200)
+        lineColor: [200, 200, 200], // Cor da linha (cinza claro 200, 200, 200)
         fillColor: [255, 255, 255], // Cor padrão das linhas ímpares (branco)
         textColor: [0, 0, 0]        // Texto preto
       },
