--- a/relogio/index.html
+++ b/relogio/index.html
@@ -10,7 +10,7 @@
   <script src="../firebase-config.js"></script>
 </head>
 <body>
-  <h1>Relógio de Oração</h1>
+  <h1>Relógio de Oraçãoxx</h1>
   <div id="horarios"></div>
 
   <script>
