--- a/relogio/index.html
+++ b/relogio/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Relógio de Oração</title>
+  <title>Relógio de Oraçãoxxxxx</title>
   <!-- Carrega Firebase App + Database -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js"></script>
