--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
             <i class="fas fa-birthday-cake me-1"></i> Aniversariantes
           </a>
         </li>
+
+        <!-- Novo item para o Relógio de Oração -->
+        <li class="nav-item">
+          <a class="nav-link" href="relogio/index.html">
+            <i class="fas fa-clock me-1"></i> Relógio de Oração
+          </a>
+        </li>
         
         <!-- Menu de Admin (só aparece para administradores) -->
         <li class="nav-item" id="adminMenuItem" style="display: none;">
