--- a/relogio/admin.html
+++ b/relogio/admin.html
@@ -111,23 +111,33 @@
 </head>
 <body>
     <div class="container">
+    <!-- Cabeçalho com botão de voltar -->
+    <div class="d-flex justify-content-between align-items-center mb-4">
         <h1>Painel Admin - Relógio de Oração</h1>
-        <button class="btn btn-add" id="btnAddHorario">+ Adicionar Horário</button>
-        
-        <table id="horariosTable">
-            <thead>
-                <tr>
-                    <th>Horário</th>
-                    <th>Nome</th>
-                    <th>Status</th>
-                    <th>Ações</th>
-                </tr>
-            </thead>
-            <tbody id="horariosBody">
-                <!-- Os horários serão carregados aqui -->
-            </tbody>
-        </table>
+        <div>
+            <a href="../index.html" class="btn btn-secondary me-2">
+                <i class="fas fa-arrow-left me-1"></i> Voltar para o Relógio
+            </a>
+            <button class="btn btn-primary" id="btnAddHorario">
+                <i class="fas fa-plus me-1"></i> Adicionar Horário
+            </button>
+        </div>
     </div>
+    
+    <table id="horariosTable" class="table">
+        <thead class="table-light">
+            <tr>
+                <th>Horário</th>
+                <th>Nome</th>
+                <th>Status</th>
+                <th>Ações</th>
+            </tr>
+        </thead>
+        <tbody id="horariosBody">
+            <!-- Os horários serão carregados aqui -->
+        </tbody>
+    </table>
+</div>
 
     <!-- Modal de Adição -->
     <div id="addModal" class="modal">
